--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <!-- Mirrored from method.ac/donate/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 19 Aug 2020 09:14:12 GMT -->
 <head>
-  <title>Fund Mark MacKay</title>
+  <link rel="shortcut icon" href="images/qka.ico" type="image/x-icon">
+  <title>Donate cho tôi</title>
   <link rel="stylesheet" type="text/css" href="base.css">
   <meta charset="utf-8">
   <meta property="og:image" content="../writing/uploads/nina.jpg" />
