--- a/index.html
+++ b/index.html
@@ -12,24 +12,26 @@
 <body>
 <div class="container">
   <h1>Donate cho tôi nếu bạn cảm thấy web này hữu ích</h1>
-  <h4 class="subtitle">The author behind <a href="wasabixxx.github.io">Method of Action</a></h4>
+  <h4 class="subtitle"> Trang web chính của tôi  <a href="wasabixxx.github.io"> WASABI </a></h4>
 
-  <p>I hope you've enjoyed my work<sup><a href="#p1">1</a></sup>. These games and tools were created over the span of eight years, self-financing the time and resources required to design, program, and maintain them. Attempts at monetization have always been met with inner resistance, for a couple of reasons.</p>
+  <p>Tôi hi vọng trang web này có thể giúp bạn<sup><a href="#p1">1</a></sup>. 
+  <p>Bạn có thể donate cho tôi bằng ví momo bằng cách mở ví , chọn vào mục chuyển tiền , chọn quét mã QR và quét mã bên dưới</p>
+  <img src="momo.jpg" width="400">
+  <p>Hoặc tại <a href="https://playerduo.com/wasabi"> playerduo </a> :* </p>
 
-   <p>Advertising nowadays is the implicit commerce of privacy, and it inevitably compromises the quality of the product. Furthermore, my only brush with advertising <a href="https://7labs.io/technology-news/subdomain-leasing.html#Proof_of_Subdomain_Leasing_Period_8211_Historical_DNS_Records">got me burned</a>. The alternative—gating content behind a paywall—blocks sincere students because institutions don't account for this kind of educational material.</p>
-
-  <p>It is in this spirit that I ask for donations, to finance more time to do the things that I love without questions like <em>how am I going to make money out of this</em> shaping the product. It is said that when the product is free, then the user is the product, yet <a href="https://method.ac/writing/articles/we_dont_value_your_privacy.html">I refuse take this stance</a>.</p>
-
-  <p>Instead, let us frame your donation as a gift of <em>freedom</em>, one of the highest virtues in my book, and for that I am deeply appreciative of your generosity.</p>
+  
 
   <p>Truly yours,</p>
 
   <img src="signature.png" width="200">
 
 
+ <p> <a href="https://wasabixxx.github.io/pentool/"> Nhấn để quay lại  </a>  </p>
+
+
   
 </body>
 
-<!-- Mirrored from method.ac/donate/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 19 Aug 2020 09:14:16 GMT -->
+
 </html>
 
